tests/neg/i20511.check
-- [E040] Syntax Error: tests/neg/i20511.scala:7:19 --------------------------------------------------------------------
7 |export toppingPrice, crustPrice // error // error
  |                   ^
  |                   '.' expected, but ',' found
-- [E040] Syntax Error: tests/neg/i20511.scala:8:0 ---------------------------------------------------------------------
8 |val i = 1 // error
  |^^^
  |'.' expected, but 'end of statement' found
-- [E083] Type Error: tests/neg/i20511.scala:7:21 ----------------------------------------------------------------------
7 |export toppingPrice, crustPrice // error // error
  |                     ^^^^^^^^^^
  |                     Any is not a valid export prefix, since it is not an immutable path
  |
  | longer explanation available when compiling with `-explain`
